# FOG-EDGE-Simulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compile_run.sh  main  main.cpp
config/: burst_config.txt  one_config.txt  one_config_with_msq_ps.txt  plat_config.txt  testconfig.txt
dev_docs/: doc.txt
ideas/: processing.txt  sensors.txt
include/: burst_conf.h  msq_actor.h  msq_actor_ps.h  msq_host.h  msq_node.h  sensor.h  stream_buffer.h
result_logs/: MsqNode-0_sensor_stream.txt  MsqNode-1_sensor_stream.txt  MsqNode-2_sensor_stream.txt  burst_math_logs.txt  how_to_use.doc  plot_sensor_log.py  test_plot_sensor_log.py
src/: burst_conf.cpp  main.cpp  msq_actor.cpp  msq_actor_ps.cpp  msq_host.cpp  msq_node.cpp  sensor.cpp  stream_buffer.cpp
